# PyTitle

./: .flake8  .gitignore  .readthedocs.yml  CHANGELOG.md  LICENSE  Makefile  README.md  README.rst  pyproject.toml  requirements.dev.txt  setup.py  tox.ini
.github/workflows/: test.yml
docs/: Makefile  modules.rst  pytitle.ass.rst  pytitle.rst  pytitle.srt.rst  pytitle.vtt.rst  requirements.txt
docs/source/: conf.py  index.rst  installing.rst  pytitle.ass.rst  pytitle.rst  pytitle.srt.rst  pytitle.vtt.rst  quick_start.rst
pytitle/: __init__.py  logger.py
pytitle/srt/: __init__.py  exceptions.py  regex.py  subtitle.py  types.py
tests/: test_srt_parse.py
tests/srt/: test_line.py  test_subtitle.py  test_timestamp.py  test_timing.py
tests/srt/subs/: Grown Ups.2010.R5.LiNE.Xvid {1337x}-Noir.srt  sample.py  shameless.us.s03e01.720p.bluray.x264-demand.srt
